added final comments to homework project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <meta description="First homework assignment-updating and correcting website"
   <!--Added a title to the website-->
     <title>Horiseon</title>
 </head>
@@ -69,6 +70,7 @@
             </p>
         </div>
         <div class="benefit-brand">
+    
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png"
             alt="Brand Awareness name and description" />
