corrected error in code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <meta description="First homework assignment-updating and correcting website"
+    <meta description="First homework assignment-updating and correcting website">
   <!--Added a title to the website-->
     <title>Horiseon</title>
 </head>
