--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="search-engine-optimization" class="search-engine-optimization">
             <!--Add an alt attribute to each of the images-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
-             alt="Search Engine Optimization image and description" />
+             alt="Picture of desktop with SEO booklet" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -45,7 +45,7 @@
         <div id="online-reputation-management" class="online-reputation-management">
             <!--Changed the float to left-->
             <img src="./assets/images/online-reputation-management.jpg" class="float-left"
-            alt="Online Reputation Management image and description" />
+            alt="Picture of a laptop" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -53,7 +53,7 @@
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left"
-            alt="Social Media Marketing image and description" />
+            alt="People sitting around a table with pictures of comments" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -64,7 +64,7 @@
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png"
-            alt="Lead Generation name and description" />
+            alt="Funnel icon" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -73,7 +73,7 @@
     
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png"
-            alt="Brand Awareness name and description" />
+            alt="Lightbulb icon" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -82,7 +82,7 @@
             <h3>Cost Management</h3>
             <!--Took out the closing /img tag-->
             <img src="./assets/images/cost-management.png"
-            alt="Cost Management name and description"/>
+            alt="Money icon"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
